    o make it possible to run external script in a ScriptObject
    o "execute" DCOP call returns a string
    o support shebang (#!/path_to/kmdr-executor) in the beginning of the .kmdr files. 
      Running .kmdr files is possible directly if you make them executable.
    o store Kommander version in the VERSION/_VERSION global variable
    o rework the plugin system
    o bump version to 1.3

Wed Jan 9 21:35:38 2008 - Andras Mantia <amantia@kde.org>
    o add Table.selection to get back the selection coordinates

Sun Dec 30 00:02:34 2007 - Andras Mantia <amantia@kde.org>
    o don't do math operations in check only mode

Thu Dec 22 00:38:31 2007 - Andras Mantia <amantia@kde.org>
    o fix the for loop parsing if end < start

Thu Dec 20 00:38:31 2007 - Andras Mantia <amantia@kde.org>
    o insert the functions using the syntax of the new parser if #!kommander 
      is specified in the associated text 
    o add DatePicker widget

Wed Dec 19 08:39:00 2007 - Eric Laffoon <eric@kdewebdev.org>
    o fixed the bug in the input text dialog where entering a default value returned the caption.

Sat Dec 15 23:58:45 2007 - Andras Mantia <amantia@kde.org>
    o return the result of a division in floating form if the result is not an integer.
      Changed the behavior in both the old and new parser.

Wed Nov 28 13:21:34 2007 - Andras Mantia <amantia@kde.org>
    o do not set array values when the assignment is in a code path which shouldn't be executed

Tue Nov 20 20:03:34 2007 - Andras Mantia <amantia@kde.org>
    o show the checked function for RadioButton widgets in the function browser

Fri Oct 19 16:08:32 2007 - Andras Mantia <amantia@kde.org>
	o make CheckBox.setChecked accept as argument false, "false", true, "true",
 	  0 (meaning false), everything else (meaning true)

Sat Oct 6 17:53:47 2007 - Andras Mantia <amantia@kde.org>
	o make multiplying work correctly for floating point values